--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <model-viewer
-        src="room.usdz"
+        src="room.glb"
         alt="3D Room"
         camera-controls
         auto-rotate
